--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -563,6 +563,7 @@ en:
         requirements:
           Flash and Javascript (but not Java!) are required to preview outfits.
         big_picture: Big Picture
+        download: Download
         mode:
           flash:
             name: Flash
