--- a/config/locales/en-MEEP.yml
+++ b/config/locales/en-MEEP.yml
@@ -609,12 +609,12 @@ en-MEEP:
         pet_type_not_found:
           We haven't meeped a %{color_name} %{species_name}. Meep?
         pet_not_found: Pet not meeped.
-      load_pet:
-        legend: Enter your pet's meep
-        submit: Meep my outfit!
-      start_from_scratch:
-        legend: Or meep from scratch
-        submit: Meep
+      submit:
+        primary: Meep my outfit!
+        secondary: Meep
+      neopia_online:
+        load_pet: Enter your pet's meep
+        start_from_scratch: Or meep from scratch
       your_items:
         tagline: Meep and meep!
         description:
