--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -279,7 +279,7 @@ es:
         user_closet_hanger_ownership: usuario
         user_owns: tiene
         user_wants: quiere
-  neopets_pages:
+  neopets_page_import_tasks:
     create:
       success: ¡Página %{index} guardada!
       created_and_updated_hangers:
