good-enough zeroclipboard implementation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -636,6 +636,7 @@ en:
             html: HTML
             bbcode: BBCode
           download: Download
+          copy_url: Copy URL
       search:
         header: Add an item
         form:
