Add Owls values to the item page
Eyy it's time!! Long-requested, finally here lol

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -302,6 +302,7 @@ en:
       rarity: Rarity
       resources:
         jn_items: JN Items
+        owls: "Owls: %{value}"
         shop_wizard: Shop Wizard
         super_shop_wizard: Super Wizard
         trading_post: Trades
